[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable a large amound of optimization in debug mode for dependencies
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time
[profile.release]
# Compile the entire crate as one unit
# Significantly slows compile times, marginal imrpovements.
codegen-units = 1
# Do a second optimiszation pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements
lto = "thin"

# Optimize for size in wasm-release mode to reduce loade times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doens't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"

